--- a/tcn/ui/templates/ui/categories/id.html
+++ b/tcn/ui/templates/ui/categories/id.html
@@ -25,7 +25,7 @@
       </div>
 
       <ol class="grid grid-cols-12 gap-4">
-        {% for article in articles.specific %}
+        {% for article in children.specific %}
         <li class="col-span-12 md:col-span-6 lg:col-span-4 2xl:col-span-3">
           {% include 'ui/components/article.html' %}
         </li>
