--- a/tcn/ui/templates/registration/password_reset_complete.html
+++ b/tcn/ui/templates/registration/password_reset_complete.html
@@ -36,7 +36,8 @@
       </h2>
 
       <p>
-        {% trans 'Your password has been set. You may go ahead and log in now.' %}
+        {% blocktrans trimmed %}Your password has been set. You may go ahead and
+        log in now.{% endblocktrans %}
       </p>
 
       <a href="{% url 'ui:login' %}" class="btn btn-sm btn-primary lg:btn-lg">
