--- a/tcn/ui/templates/registration/profile.html
+++ b/tcn/ui/templates/registration/profile.html
@@ -6,9 +6,25 @@
   <div
     class="card card-sm w-full max-w-lg bg-base-200 shadow-xs md:card-md xl:card-lg 2xl:card-xl 2xl:max-w-xl"
   >
-    <figure class="mx-auto size-32 lg:size-56">
-      <i data-lucide="user" class="size-full text-primary"></i>
-    </figure>
+    <div class="flex items-center justify-center py-8">
+      {% if request.user.photo %}
+      <div class="avatar">
+        <div class="mask mask-squircle size-20 lg:size-32">
+          <img src="{{ request.user.photo.url }}" alt="{{ request.user }}" />
+        </div>
+      </div>
+      {% else %}
+      <div class="avatar avatar-placeholder">
+        <div
+          class="mask mask-squircle flex items-center justify-center bg-primary text-primary-content size-20 lg:size-32"
+        >
+          <span class="text-5xl uppercase font-bold lg:text-7xl">
+            {{ request.user.first_name|slice:':1' }}
+          </span>
+        </div>
+      </div>
+      {% endif %}
+    </div>
 
     <div class="card-body gap-4 lg:gap-6">
       <h1 class="card-title text-center text-primary">
