--- a/tcn/ui/templates/ui/articles/archive/day.html
+++ b/tcn/ui/templates/ui/articles/archive/day.html
@@ -15,7 +15,7 @@
       {% if previous_day %}
       <div
         class="tooltip tooltip-bottom tooltip-primary"
-        data-tip="{% trans 'Prev' %}"
+        data-tip="{% trans 'Previous' %}"
       >
         <a
           class="btn btn-copy btn-square btn-sm btn-primary md:btn-md 2xl:btn-lg"
@@ -25,7 +25,7 @@
             data-lucide="chevron-left"
             class="size-4 md:size-6 rtl:rotate-180"
           ></i>
-          <span class="sr-only">{% trans 'Prev' %}</span>
+          <span class="sr-only">{% trans 'Previous' %}</span>
         </a>
       </div>
       {% endif %}
