--- a/tcn/ui/templates/ui/components/breadcrumbs.html
+++ b/tcn/ui/templates/ui/components/breadcrumbs.html
@@ -2,9 +2,9 @@
 
 <nav class="breadcrumbs text-primary text-xs lg:text-sm">
   <ol>
-    {% for page in article.get_ancestors %}{% if not page.is_root %}
+    {% for page in page.get_ancestors %}{% if not page.is_root %}
     <li>
-      <a href="{% pageurl page %}"> {{ page }} </a>
+      <a href="{% pageurl page %}">{{ page }}</a>
     </li>
     {% endif %}{% endfor %}
     <li>{{ page }}</li>
