--- a/tcn/ui/templates/ui/components/messages.html
+++ b/tcn/ui/templates/ui/components/messages.html
@@ -1,5 +1,5 @@
 {% if messages %}
-<div class="toast toast-top toast-end top-24 right-8 z-10">
+<div class="toast toast-top toast-end top-24 right-4 lg:right-24 z-50">
   <ol class="grid gap-4 max-w-2xl mx-auto">
     {% for message in messages %}
     <li class="alert alert-horizontal alert-{{ message.tags }}">
