--- a/tcn/ui/templates/ui/categories/id.html
+++ b/tcn/ui/templates/ui/categories/id.html
@@ -24,11 +24,11 @@
         {{ category.description|richtext }}
       </div>
 
-      <ol class="grid grid-cols-12 gap-4">
+      <ol class="grid grid-cols-12 grid-rows-[auto] gap-4">
         {% for article in children.specific %}
-        <li class="col-span-12 md:col-span-6 lg:col-span-4 2xl:col-span-3">
-          {% include 'ui/components/article.html' %}
-        </li>
+        <!---->
+        {% include 'ui/components/article-2.html' %}
+        <!---->
         {% endfor %}
       </ol>
 
