--- a/tcn/ui/templates/ui/base.html
+++ b/tcn/ui/templates/ui/base.html
@@ -174,7 +174,7 @@
                         data-lucide="alert-circle"
                         class="size-4 md:size-6"
                       ></i>
-                      <span class="sr-only">{% trans 'Breaking news' %}</span>
+                      <span class="sr-only">{% trans 'Breaking' %}</span>
                     </a>
                   </li>
 
@@ -440,9 +440,7 @@
                             data-lucide="alert-circle"
                             class="size-4 md:size-6"
                           ></i>
-                          <span class="sr-only">
-                            {% trans 'Breaking news' %}
-                          </span>
+                          <span class="sr-only"> {% trans 'Breaking' %} </span>
                         </a>
                       </div>
 
@@ -812,7 +810,7 @@
                   class="btn btn-sm btn-ghost btn-error md:btn-md btn-block 2xl:btn-xl justify-start"
                 >
                   <i data-lucide="alert-circle" class="size-4 md:size-6"></i>
-                  <span>{% trans 'Breaking news' %}</span>
+                  <span>{% trans 'Breaking' %}</span>
                 </a>
               </li>
 
