--- a/tcn/ui/templates/ui/components/article-2.html
+++ b/tcn/ui/templates/ui/components/article-2.html
@@ -12,14 +12,30 @@
 
   <div class="card-body justify-end">
     <h2 class="card-title text-primary">{{ article.title }}</h2>
+    {% if article.country %}
+    <div>
+      <div
+        class="tooltip tooltip-success"
+        data-tip="{{ article.country.name }}"
+      >
+        <a
+          href="{% url 'ui:articles' %}?country={{ article.country }}"
+          class="badge badge-success badge-xl"
+        >
+          <i data-lucide="map-pin" class="size-4 lg:size-6"></i>
+          {{ article.country }}
+        </a>
+      </div>
+    </div>
+    {% endif %}
     <p class="hidden grow-0 group-first:block">{{ article.headline }}</p>
     <div class="card-actions items-center gap-2">
       {% if article.is_breaking %}
       <div class="tooltip flex tooltip-error" data-tip="{% trans 'Breaking' %}">
         <div class="inline-grid *:[grid-area:1/1]">
           <span class="sr-only">{% trans 'Breaking' %}</span>
-          <div class="status lg:status-xl status-error animate-ping"></div>
-          <div class="status lg:status-xl status-error"></div>
+          <div class="status status-xl status-error animate-ping"></div>
+          <div class="status status-xl status-error"></div>
         </div>
       </div>
       {% endif %}
