--- a/tcn/ui/templates/ui/components/article.html
+++ b/tcn/ui/templates/ui/components/article.html
@@ -19,6 +19,23 @@
     </figure>
     <div class="card-body justify-end">
       <h2 class="card-title text-primary">{{ article.title }}</h2>
+      {% if article.country %}
+      <div>
+        <div
+          class="tooltip tooltip-success"
+          data-tip="{{ article.country.name }}"
+        >
+          <a
+            href="{% url 'ui:articles' %}?country={{ article.country }}"
+            class="badge badge-success badge-xl"
+          >
+            <i data-lucide="map-pin" class="size-4 lg:size-6"></i>
+            {{ article.country }}
+          </a>
+        </div>
+      </div>
+      {% endif %}
+
       <p class="hidden grow-0 group-first:block">{{ article.headline }}</p>
 
       <div class="card-actions items-center gap-2">
@@ -29,18 +46,18 @@
         >
           <div class="inline-grid *:[grid-area:1/1]">
             <span class="sr-only">{% trans 'Breaking' %}</span>
-            <div class="status lg:status-xl status-error animate-ping"></div>
-            <div class="status lg:status-xl status-error"></div>
+            <div class="status status-xl status-error animate-ping"></div>
+            <div class="status status-xl status-error"></div>
           </div>
         </div>
         {% endif %}
         <a
           href="{% pageurl article.get_parent %}"
-          class="tooltip tooltip-success"
+          class="tooltip tooltip-primary"
           data-tip="{% trans 'Category' %}"
         >
           <span
-            class="badge badge-sm md:badge-md xl:badge-lg 2xl:badge-xl badge-success font-semibold"
+            class="badge badge-sm md:badge-md xl:badge-lg 2xl:badge-xl badge-primary font-semibold"
           >
             {{ article.get_parent.title }}
           </span>
