--- a/tcn/ui/templates/ui/articles/id.html
+++ b/tcn/ui/templates/ui/articles/id.html
@@ -248,7 +248,9 @@
   <div
     class="prose mx-auto prose-sm prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-headings:font-serif rtl:prose-headings:font-kufi prose-img:rounded-box prose-img:w-full prose-pre:bg-base-200 prose-pre:border prose-pre:border-base-300"
   >
-    {% image article.image fill-1920x1080 %}
+    <figure class="skeleton overflow-clip">
+      {% image article.image fill-1920x1080 %}
+    </figure>
 
     <p class="lead">{{ article.headline }}</p>
 
