--- a/tcn/ui/templates/ui/components/article-1.html
+++ b/tcn/ui/templates/ui/components/article-1.html
@@ -2,7 +2,7 @@
 
 <li
   role="article"
-  class="relative card bg-base-300 hover:bg-base-200 card-side card-sm md:card-md lg:card-lg xl:card-xl nth-[2]:lg:col-span-6 nth-[3]:lg:col-span-6 nth-[2]:lg:row-span-3 nth-[3]:lg:row-span-3 group col-span-12 row-span-12 size-full shadow-sm first:flex-col md:col-span-6 md:row-span-6 first:md:col-span-12 lg:col-span-6 lg:row-span-6 first:lg:col-span-6 first:lg:row-span-6"
+  class="relative card bg-base-300 hover:bg-base-200 card-side card-sm md:card-md xl:card-lg 2xl:card-xl nth-[2]:lg:col-span-6 nth-[3]:lg:col-span-6 nth-[2]:lg:row-span-3 nth-[3]:lg:row-span-3 group col-span-12 row-span-12 size-full shadow-sm first:flex-col md:col-span-6 md:row-span-6 first:md:col-span-12 lg:col-span-6 lg:row-span-6 first:lg:col-span-6 first:lg:row-span-6"
 >
   <a href="{% url 'ui:redirect' article.link.slug %}" class="absolute inset-0">
     <span class="sr-only">{% trans 'Read' %}</span>
