--- a/tcn/ui/templates/ui/components/article-2.html
+++ b/tcn/ui/templates/ui/components/article-2.html
@@ -2,7 +2,7 @@
 
 <li
   role="article"
-  class="relative card bg-base-300 hover:bg-base-200 card-sm md:card-md lg:card-lg xl:card-xl lg:nth-[2]:col-span-8 lg:nth-[2]:row-span-6 xl:nth-[2]:col-span-6 xl:nth-[2]:row-span-4 col-span-12 row-span-12 size-full shadow-sm md:col-span-6 md:row-span-6 lg:col-span-4 lg:row-span-4 xl:col-span-3 xl:row-span-3"
+  class="relative card bg-base-300 hover:bg-base-200 card-sm md:card-md xl:card-lg 2xl:card-xl lg:nth-[2]:col-span-8 lg:nth-[2]:row-span-6 xl:nth-[2]:col-span-6 xl:nth-[2]:row-span-4 col-span-12 row-span-12 size-full shadow-sm md:col-span-6 md:row-span-6 lg:col-span-4 lg:row-span-4 2xl:col-span-3 2xl:row-span-3"
 >
   <a href="{% url 'ui:redirect' article.link.slug %}" class="absolute inset-0">
     <span class="sr-only">{% trans 'Read' %}</span>
