--- a/tcn/ui/templates/ui/components/article.html
+++ b/tcn/ui/templates/ui/components/article.html
@@ -5,7 +5,7 @@
   class="group col-span-12 row-span-12 md:col-span-6 md:row-span-3 first:md:col-span-6 first:md:row-span-6 lg:col-span-3"
 >
   <div
-    class="card relative bg-base-300 hover:bg-base-200 card-side card-sm md:card-md lg:card-lg xl:card-xl size-full shadow-sm group-first:flex-col lg:flex-col"
+    class="card relative bg-base-300 hover:bg-base-200 card-side card-sm md:card-md xl:card-lg 2xl:card-xl size-full shadow-sm group-first:flex-col lg:flex-col"
   >
     <a
       href="{% url 'ui:redirect' article.link.slug %}"
